# fox-1.6.57_cmake

./: CMakeLists.txt  config.h.in
examples/: adie.7z  calculator.7z  pathfinder.7z  shutterbug.7z
include/: FXBuildConfig.h  xincs.h
src/: FXDir.cpp  FXGLCanvas.cpp  FXGLViewer.cpp  FXSplitter.cpp  fxutils.cpp
windows/vcpp/: win32.sln
windows/vcpp/adie/: adie.vcxproj
windows/vcpp/bitmapviewer/: bitmapviewer.vcxproj
windows/vcpp/button/: button.vcxproj
windows/vcpp/calculator/: calculator.vcxproj
windows/vcpp/chart/: chart.vcxproj
windows/vcpp/datatarget/: datatarget.vcxproj
windows/vcpp/dctest/: dctest.vcxproj
windows/vcpp/dialog/: dialog.vcxproj
windows/vcpp/dirlist/: dirlist.vcxproj
windows/vcpp/expression/: expression.vcxproj
windows/vcpp/foursplit/: foursplit.vcxproj
windows/vcpp/fox/: fox.vcxproj
windows/vcpp/fox/x64/Debug/: version.res
windows/vcpp/foxdll/: foxdll.vcxproj
windows/vcpp/gltest/: gltest.vcxproj
windows/vcpp/glviewer/: glviewer.vcxproj
windows/vcpp/groupbox/: groupbox.vcxproj
windows/vcpp/header/: header.vcxproj
windows/vcpp/hello/: hello.vcxproj
windows/vcpp/hello2/: hello2.vcxproj
windows/vcpp/iconlist/: iconlist.vcxproj
windows/vcpp/image/: image.vcxproj
windows/vcpp/imageviewer/: imageviewer.vcxproj
windows/vcpp/layout/: layout.vcxproj
windows/vcpp/mditest/: mditest.vcxproj
windows/vcpp/memmap/: memmap.vcxproj
windows/vcpp/minheritance/: minheritance.vcxproj
windows/vcpp/pathfinder/: pathfinder.vcxproj
windows/vcpp/ratio/: ratio.vcxproj
windows/vcpp/reswrap/: reswrap.vcxproj
windows/vcpp/scribble/: scribble.vcxproj
windows/vcpp/shutter/: shutter.vcxproj
windows/vcpp/shutterbug/: shutterbug.vcxproj
windows/vcpp/splitter/: splitter.vcxproj
windows/vcpp/switcher/: switcher.vcxproj
windows/vcpp/tabbook/: tabbook.vcxproj
windows/vcpp/table/: table.vcxproj
windows/vcpp/wizard/: wizard.vcxproj
